--- a/scratch-Framework/pom.xml
+++ b/scratch-Framework/pom.xml
@@ -5,6 +5,23 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.0.0-M7</version>
+					<configuration>
+						<suiteXmlFiles>
+							<suiteXmlFile>testng,xml</suiteXmlFile>
+						</suiteXmlFiles>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+
 	<dependencies>
 
 		<dependency>
@@ -25,13 +42,14 @@
 			<version>7.6.1</version>
 			<scope>test</scope>
 		</dependency>
+		
 
 		<dependency>
 			<groupId>com.aventstack</groupId>
 			<artifactId>extentreports</artifactId>
-			<version>5.0.8</version>
+			<version>4.0.9</version>
 		</dependency>
-
+	
 		<dependency>
 			<groupId>com.google.zxing</groupId>
 			<artifactId>core</artifactId>
